# SayIt

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  index.html  main-window.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.json
.claude/hooks/: eslint.sh  protect-config.ps1  protect-config.sh  rustfmt.sh  typecheck.sh
.github/: copilot-instructions.md
.github/instructions/: frontend.instructions.md  rust.instructions.md  tests.instructions.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml
_bmad-output/: project-context.md
_bmad-output/planning-artifacts/: architecture.md
docs/: adr-claude-code-review-fork-pr.md  api-contracts-backend.md  deployment-guide.md  development-guide.md  index.md  integration-architecture.md  project-overview.md  source-tree-analysis.md
scripts/: release.sh
src/: App.vue  MainApp.vue  main-window.ts  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/plugins/: analytics.rs  audio_control.rs  audio_recorder.rs  azure_auth.rs  clipboard_paste.rs  file_transfer.rs  hotkey_listener.rs  keyboard_monitor.rs  logging.rs  mod.rs  sound_feedback.rs  text_field_reader.rs  transcription.rs
src/components/: DashboardUsageChart.vue  NotchHud.vue
src/composables/: useTableSort.ts  useTauriEvents.ts
src/i18n/: index.ts
src/lib/: analytics.ts  apiPricing.ts  azureAuth.ts  connectionTest.ts  database.ts  enhancer.ts  errorUtils.ts  hallucinationDetector.ts  llmProvider.ts  logger.ts  modelRegistry.ts  semanticDriftObserver.ts  sentry.ts  sentryScrubbing.ts  settingsTransfer.ts  theme.ts  (+6 more)
(+64 files in other folders)
