[package]
name = "sayit"
version = "0.13.2"
edition = "2021"

[lib]
name = "sayit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
thiserror = "2"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "~2.10.0"
tauri-plugin-store = "~2.4"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
sentry = "0.46"
cpal = "0.15"
hound = "3.5"
rustfft = "6"
reqwest = { version = "0.12", features = ["multipart", "json", "rustls-tls", "rustls-tls-native-roots"] }
tokio = { version = "1", features = ["time"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-log = "2.8.0"
log = "0.4.33"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_System_Registry",
    "Win32_Graphics_Dwm",
] }

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
